# west

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  build_arch.sh  intro.md  readme.md  status.md  west.code-workspace
Projects/: quake2d.dpr  quake2d.lps  west.lpi  west.lpr  west.lps  west_aarch64.lpi  west_aarch64.lps  west_intel.lpr
Projects/backup/: quake2d.lpr  quake2d.lps.bak  west.lpi.bak  west.lpr  west.lps.bak  west_aarch64.lps.bak
Site/pascal_interpreter/: CODE_OF_CONDUCT.md  License.md  README.md  index.html  menu.html  styles.css
Site/pascal_interpreter/backend/: backend.php  index.php  interpreter.php  wp-load.php
Site/pascal_interpreter/frontend/: package-lock.json  package.json  vue.config.js
Site/pascal_interpreter/frontend/public/: login.html  registration.html
Site/pascal_interpreter/frontend/src/: App.vue  eslint.config.js
Site/pascal_interpreter/wp-content/plugins/db/: db.sql
Site/pascal_interpreter/wp-content/plugins/mmo/: App.vue  dashboard.php  my-login-plugin.php  package.json  webpack.config.js
Site/pascal_interpreter/wp-content/plugins/mmo/assets/components/: Captcha.vue  Dashboard.vue  Login.vue  Registration.vue  Sidebar.vue
Site/pascal_interpreter/wp-content/plugins/mmo/assets/css/: styles.css
Site/pascal_interpreter/wp-content/plugins/mmo/assets/js/: dashboard.js
builds/: build  cortex-a8.asm  rpi.S
client/: cl_main.pas  cl_scrn.pas  cl_tent.pas  cl_view.pas  menu.pas
client/backup/: menu.pas
components/firstsetup/: firstsetup.pas  server_config.ini
components/hud/: hud.lfm  hud.lua  hud.pas  mainform.pas
components/key/: key  key.lpi  key.lpr  key.lps  key.pas
components/key/backup/: key.lpi
components/key/lib/x86_64-darwin/: key.compiled
components/rpi-setup/: README.md  setup.pas
components/shadow/: Unit1.dcu  Unit1.pas  firstsetup.dcu  firstsetup.dfm  firstsetup.lfm  firstsetup.pas  hud.dcu  hud.dfm  hud.lfm  hud.pas  shadow.dpr  shadow.~dpr
components/shadow/ConverterBackup/: Unit1.dfm  hud.pas  shadow.dpr
components/shadow/backup/: Unit1.lfm  Unit1.pas  firstsetup.lfm  firstsetup.pas  hud.lfm  shadow.lpi  shadow.lps
components/sounds/: limitogg  limitogg.lpr  limitogg.lps
components/sounds/backup/: limitogg.lpi  limitogg.lpr  limitogg.lps
components/sounds/lib/x86_64-darwin/: limitogg.compiled
components/udp/: server.pas
doc/: 01_index.md  02_installation.md
fps/: intro.md
fps/Projects/: ekron.icns  gamex86.lpi  gamex86.lpr  gamex86.lps  quake2d.lpr  west.lps  west_aarch64.lpi  west_aarch64.lpr  west_aarch64.lps  west_aarch64.res  west_fedora.lpr  west_intel.lpr
fps/Projects/ConverterBackup/: q_shared.pas
fps/Projects/backup/: gamex86.lpr  gamex86.lps.bak  quake2d.lpi.bak  west.lps.bak  west_aarch64.lps.bak
fps/client/: Console.pas  cl_tent.pas
fps/client/backup/: cl_ents.pas  cl_main.pas  cl_tent.pas  cl_view.pas
fps/ctf/backup/: g_target.pas.bak
fps/game/: m_flash.pas
fps/game/backup/: g_ai.pas.bak  g_chase.pas.bak  g_cmds.pas.bak  g_func.pas.bak  g_items.pas.bak  g_local.pas.bak  g_local_add.pas.bak  g_main.pas.bak  g_misc.pas.bak  g_monster.pas.bak  g_phys.pas.bak  g_spawn.pas.bak  g_svcmds.pas.bak  g_target.pas.bak  g_trigger.pas.bak  g_turret.pas.bak  g_weapon.pas.bak  game_add.pas  m_actor.pas.bak  m_berserk.pas.bak  m_boss2.pas.bak  m_boss3.pas.bak  m_boss31.pas.bak  m_boss32.pas.bak  m_brain.pas.bak  m_chick.pas.bak  m_float.pas.bak  m_flyer.pas.bak  m_gladiator.pas.bak  m_gunner.pas.bak  m_hover.pas.bak  m_insane.pas.bak  m_medic.pas.bak  m_move.pas.bak  m_mutant.pas.bak  m_parasite.pas.bak  m_player.pas.bak  m_soldier.pas.bak  m_supertank.pas.bak  m_tank.pas.bak  (+5 more)
fps/null/backup/: sys_null.pas.bak  vid_null.pas.bak
fps/qcommon/: CModel.pas  CPas.pas  Common.pas  PMoveUnit.pas
fps/qcommon/backup/: CPas.pas  Common.pas  Files.pas  qfiles.pas
launcher/: launcher.pas  project1.lps
launcher/backup/: launcher.pas  project1.lpi  project1.lps  unit1.lfm
launcher/launcher.app/Contents/: Info.plist
launcher/launcher.app/Contents/MacOS/: launcher
launcher/lib/x86_64-darwin/: launcher.lfm  launcher.ppu  project1.compiled  project1.or  unit1.ppu
mmo/Projects/: mmo  mmo.lpi  mmo.lpr  mmo.lps
mmo/Projects/backup/: mmo.lpi  mmo.lpi.bak  mmo.lpr  mmo.lps  mmo.lps.bak
mmo/Projects/lib/x86_64-darwin/: cl_main.ppu  glfw.ppu  mmo.compiled
mmo/client/: cl_main.pas
mmo/client/backup/: cl_main.pas
mmo/game/: common.pas  glfw.pas  lua54.pas
mobile/: CMakeLists.txt
mobile/android/src/: main.cpp  main.qml
mobile/ios/src/: main.qml
qcommon/: CVar.pas  Delphi_cdecl_printf.pas  Files.pas  crc.pas  md4.pas  net_chan.pas  qfiles.pas
qcommon/backup/: CVar.pas  crc.pas  net_chan.pas
tools/: generator.sh  parser.pas
tools/launcher/: CMakeLists.txt  Makefile  README.md  filecopy.cpp  fileextract.cpp  imgs.qrc  launch.pro  launcher.lfm  mainwindow.cpp  project1.lpi  project1.lpr  project1.lps  ui_installwizard.h  ui_installwizard_copy.h  ui_installwizard_eula.h  ui_installwizard_finished.h  ui_installwizard_patch.h  ui_installwizard_setup.h  ui_mainwindow.h  utils.cpp  utils.h
tools/launcher/backup/: launcher.pas  project1.lpi  project1.lps
tools/launcher/lib/x86_64-darwin/: launcher.ppu  project1.or  project1.res
vala/: README.md  meson.build
vala/src/: Application.vala
